--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>    
         <section id="TopNav">
 
-            <aside><a href=#>About</a> | <a href="Portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></aside>
+            <aside><a href=#>About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></aside>
 
             <div id="Name">Bilal Saeed</div>
          </section>
