--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                             <td style="padding: 15px;"><img src=".\images\hangman.png" height="130" width="170" >
                                 <div class="ImageCaption">Hangman</div>
                             </td>
-                            <td><img src=".\images\RPGGame.png" height="130" width="170">
+                            <td><img src=".\images\rpggame.png" height="130" width="170">
                                 <div class="ImageCaption">RPG Game</div>
                             </td>
                         </tr>
